--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,12 @@ img {
 
 .container {
   height: 100vh;
-
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .slider {
-  width: 80%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -24,7 +21,7 @@ img {
 
 .main-slider {
   height: 80vh;
-  width: 60vw;
+  width: 90vh;
   margin-bottom: 15px;
 }
 
